2018-03-12         [RELEASE] Release of filefill 1.1.0 (Nicole Cordes)
2018-03-12 482284d [FEATURE] Allow to reset missing files in storage record (Nicole Cordes)
2018-03-12 3f1934b [BUGFIX] Prevent exception for empty resources configuration (Nicole Cordes)

2018-03-10         [RELEASE] Release of filefill 1.0.0 (Nicole Cordes)
2018-03-09 a945b47 [FEATURE] Add README.md (Nicole Cordes)
2018-03-09 ef7db81 [BUGFIX] Add missing autoload information (Nicole Cordes)
2018-03-05 ee14f6f [FEATURE] Add StyleCI Coding Style Service (Nicole Cordes)
2018-03-05 1ce618b [FEATURE] Add friendsofphp/php-cs-fixer as suggestion (Nicole Cordes)
2018-03-05 e002e8c [FEATURE] Add Travis CI configuration (Nicole Cordes)
2018-03-02 75e9e82 [FEATURE] Implement placeholder.com API as resource target (Nicole Cordes)
2018-03-02 82d8a84 [FEATURE] Implement sys_domain records as resource target (Nicole Cordes)
2018-03-02 b78889f [FEATURE] Implement DomainResource as resource target (Nicole Cordes)
2018-03-02 c885371 [FEATURE] Replace existing driver with FileFillDriver in ResourceStorage (Nicole Cordes)
2018-02-28 1c1a08c [FEATURE] Add TCA configuration for sys_file_storage records (Nicole Cordes)
2018-02-27 ad9bf0d [TASK] Add basic extension files (Nicole Cordes)